--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scene"
-    style="@style/activity_main_landscape"
+    style="@style/activity_main_portrait.activity_main_landscape"
     android:baselineAligned="false">
 
     <LinearLayout
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/title_main"
-            style="@style/head_title"
+            style="@style/head_text.head_title"
             android:layout_marginTop="@dimen/standard"
             android:text="@string/tour_guide" />
 
@@ -48,7 +48,7 @@
 
         <ImageView
             android:id="@+id/castle_thumbnail"
-            style="@style/castle_thumbnail"
+            style="@style/stadium_thumbnail.castle_thumbnail"
             android:layout_toEndOf="@id/center_view"
             android:contentDescription="@string/castle_thumbnail"
             android:src="@drawable/legnica_castle_thumbnail" />
@@ -62,14 +62,14 @@
 
         <ImageView
             android:id="@+id/hospital_thumbnail"
-            style="@style/hospital_thumbnail"
+            style="@style/cathedral_thumbnail.hospital_thumbnail"
             android:layout_toEndOf="@id/center_view"
             android:contentDescription="@string/hospital_thumbnail"
             android:src="@drawable/legnica_hospital_thumbnail" />
 
         <ImageView
             android:id="@+id/marketplace_thumbnail"
-            style="@style/marketplace_thumbnail"
+            style="@style/cathedral_thumbnail.marketplace_thumbnail"
             android:layout_alignStart="@+id/museum_thumbnail"
             android:contentDescription="@string/marketplace_thumbnail"
             android:src="@drawable/legnica_marketplace_thumbnail" />
@@ -89,7 +89,7 @@
 
         <ImageView
             android:id="@+id/theatre_thumbnail"
-            style="@style/theatre_thumbnail"
+            style="@style/park_thumbnail.theatre_thumbnail"
             android:layout_toEndOf="@id/center_view"
             android:contentDescription="@string/theatre_thumbnail"
             android:src="@drawable/legnica_theatre_thumbnail" />
