--- a/app/src/main/res/layout-land/details_for_lists.xml
+++ b/app/src/main/res/layout-land/details_for_lists.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/details_lists_main_scrollview"
+    style="@style/details_main_scrollview"
     android:fillViewport="true">
 
     <LinearLayout
@@ -9,7 +9,7 @@
         android:baselineAligned="false">
 
         <LinearLayout
-            style="@style/details_lists_image_layout_landscape"
+            style="@style/details_description_layout_landscape.details_lists_image_layout_landscape"
             android:layout_marginBottom="@dimen/standard"
             android:layout_marginStart="@dimen/standard"
             android:layout_marginTop="@dimen/standard"
@@ -17,18 +17,18 @@
 
             <ImageView
                 android:id="@+id/details_image"
-                style="@style/details_lists_image"
+                style="@style/details_image"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/details_image" />
 
             <TextView
                 android:id="@+id/image_description"
-                style="@style/details_lists_image_description_landscape" />
+                style="@style/details_image_description" />
 
         </LinearLayout>
 
         <LinearLayout
-            style="@style/details_lists_description_layout_landscape"
+            style="@style/details_description_layout_landscape"
             android:layout_marginEnd="@dimen/standard"
             android:layout_marginStart="@dimen/half"
             android:layout_marginTop="@dimen/standard"
@@ -36,7 +36,7 @@
 
             <TextView
                 android:id="@+id/details_head_text"
-                style="@style/details_lists_head_text_landscape" />
+                style="@style/details_head_text" />
 
             <TextView
                 android:id="@+id/details_description"
@@ -45,7 +45,7 @@
 
             <ImageButton
                 android:id="@+id/back_list_button"
-                style="@style/details_lists_back_button"
+                style="@style/details_back_button"
                 android:layout_marginBottom="@dimen/standard"
                 android:layout_marginTop="@dimen/standard"
                 android:contentDescription="@string/back_list_button"
