--- a/app/src/main/res/layout/details_for_lists_addresses.xml
+++ b/app/src/main/res/layout/details_for_lists_addresses.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/details_addresses_main_scrollview">
+    style="@style/details_main_scrollview">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,19 +9,19 @@
 
         <TextView
             android:id="@+id/details_head_text"
-            style="@style/details_addresses_head_text_portrait"
+            style="@style/details_head_text"
             android:layout_marginTop="@dimen/standard" />
 
         <ImageView
             android:id="@+id/details_image"
-            style="@style/details_addresses_image"
+            style="@style/details_image"
             android:layout_marginTop="@dimen/half"
             android:adjustViewBounds="true"
             android:contentDescription="@string/details_image" />
 
         <TextView
             android:id="@+id/image_description"
-            style="@style/details_addresses_image_description_portrait" />
+            style="@style/details_image_description" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,13 +32,13 @@
 
             <TextView
                 android:id="@+id/address"
-                style="@style/details_addresses_description_item"
+                style="@style/details_description.details_addresses_description_item"
                 android:drawablePadding="@dimen/quarter"
                 android:drawableStart="@drawable/notebook" />
 
             <TextView
                 android:id="@+id/webpage"
-                style="@style/details_addresses_description_item"
+                style="@style/details_description.details_addresses_description_item"
                 android:layout_marginTop="@dimen/quarter"
                 android:autoLink="web"
                 android:drawablePadding="@dimen/quarter"
@@ -47,7 +47,7 @@
 
             <TextView
                 android:id="@+id/email"
-                style="@style/details_addresses_description_item"
+                style="@style/details_description.details_addresses_description_item"
                 android:layout_marginTop="@dimen/quarter"
                 android:autoLink="email"
                 android:drawablePadding="@dimen/quarter"
@@ -56,7 +56,7 @@
 
             <TextView
                 android:id="@+id/phone"
-                style="@style/details_addresses_description_item"
+                style="@style/details_description.details_addresses_description_item"
                 android:layout_marginTop="@dimen/quarter"
                 android:autoLink="phone"
                 android:drawablePadding="@dimen/quarter"
@@ -67,7 +67,7 @@
 
         <ImageButton
             android:id="@+id/back_list_button"
-            style="@style/details_addresses_back_button"
+            style="@style/details_back_button"
             android:layout_marginBottom="@dimen/standard"
             android:layout_marginTop="@dimen/standard"
             android:contentDescription="@string/back_list_button"
